fix: input field is available through z-index

--- a/src/app/pages/dashboard/header-dashboard/search-bar/search-bar.component.scss
+++ b/src/app/pages/dashboard/header-dashboard/search-bar/search-bar.component.scss
@@ -14,6 +14,7 @@ input {
   padding-left: 45px;
   line-height: 70px;
   font-size: 24px;
+  z-index: 1001;
 }
 
 .inputWithSearchIcon {
@@ -27,6 +28,7 @@ input {
 .search-icon {
   position: absolute;
   right: 45px;
+  z-index: 1001;
 }
 
 .close {
